--- a/city.html
+++ b/city.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <!--font-awesome-->
+
+        <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
 <script>
@@ -11,219 +17,104 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
-	<link rel='icon' href='favicon.ico' type='image/x-icon'/>
+<!--Style Sheets -->
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet"> 
-    <title>Blades in the Dark Ann Arbor</title>
+<!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
+<!--JavaScript-->
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <title>Blades in the Dark - The City</title>
 </head>
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
-      <nav>
-        <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="crew.html">The Crew</a></li>
-          <li><a class="active" href="city.html">The City</a></li>
-          <li><a href="newspaper.html">The Duskvol Daily</a></li>
-        </ul>
-      </nav>
-	<header>
-  		<h1>Step into eternal dusk…</h1>
+    <header>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <nav>
+            <ul class="nav_links">
+              <li><a href="index.html">The Game</a></li>
+               <li><a class="active" href="map.html"><i class="fas fa-dungeon"></i> The City</a></li>
+              <li><a href="crew.html">The Crew</a></li>
+              <li><a href="faction.html">The Faction</a></li>
+              <li><a href="newspaper.html">The Duskvol Daily</a></li>
+               <li><a href="contact.html">The Contact</a></li>
+            </ul>
+          </nav>
     </header>
     <main id="main">
-        <div class="grid-container">
+      <h1>~The City of Dusk~</h1>
+      <div class="grid-container">
+  <div class="grid-item map"><img src="images/map.png" alt="Map of Fictional City Duskvol"></div>
+  <div class="grid-item barwickeft">
+    <p>
+        <h2>Barrwickeft</h2>
+          Residences and markets for the farmers who work the fields and eeleries.
+      </p>
+  </div>
+  <div class="grid-item brightstone">
+    <p>
+      <h2>Brightstone</h2>
+          The grand mansions and luxury shops of the wealthy elite.
+      </p>
+  </div>  
+  <div class="grid-item charhollow">
+    <p>
+      <h2>Charhollow</h2>
+          A crowded district of tenements and stacked houses.
+    </p>
+  </div>
+  <div class="grid-item coalridge">
+    <p>
+      <h2>Coalridge</h2>
+          The remnants of Doskvol's original hilltop mining settlment, now home to laborers and industrial factories.
+      </p>
+  </div>
+  <div class="grid-item crow">
+    <p>
+      <h2>Crow's Foot</h2>
+          A cramped neighborhood of multi-level streets, ruled by gangs.
+      </p>
+  </div>
+  <div class="grid-item dock">
+    <p>
+      <h2>The Docks</h2>
+          Rough taverns, tattoo parlors, fighting pits, and warehouses.
+      </p>
+  </div>
+  <div class="grid-item nightmarket">
+    <p>
+      <h2>Nightmarket</h2>
+          The trade center for exotic goods imported by rail. Many vendors also trade in illicit goods. Home to the Gaddoc Rail Station.
+    </p>
+  </div>
+  <div class="grid-item silkshore">
+    <p>
+      <h2>Silkshore</h2>
+          The "red lamp district" and arist community.
+    </p>
+  </div>
+  <div class="grid-item sixtowers">
+    <p>
+      <h2>Six Towers</h2>
+          A formerly rich district, now worn down and dilapidated.
+      </p>
+  </div>
+  <div class="grid-item whitecrown">
+    <p>
+      <h2>Whitecrown</h2>
+          The sprawling estates of the Lord Governor, Hunter Commander, Master Warden, and Doskvol Acadamy.
+    </p>
+  </div>
+</div>
 
-        <!--Bluecoats image from Carnval Row on Amazon Prime https://vignette.wikia.nocookie.net/carnival-row/images/5/5c/Charakter_Dombey.png/revision/latest?cb=20190918153852&path-prefix=de-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/bluecoats.png" alt="Bluecoat with muttonchops">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Blue Coats</h2>
-      <h3>Institutions of the City</h3>
-      <p>The City Watch of Duskvol, tasked with upholding the law. Known as the meanest gang in the city. Corrupt, violent, and cruel</p>
-    </div>
-  </div>
-</div>
-        <!--Spirit Warden from Deviant Art Page of Mitchell Nolte https://www.deviantart.com/mitchellnolte/art/Plague-Doctor-216755512-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/spiritwarden.jpg" alt="Masked Spiritwarden">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Spiritwardens</h2>
-      <h3>Institution of the City</h3>
-      <p>The bronze-masked hunters who destory rogue spirits. Also run Bellweather Crematorium and research artifacts scanged in the deathlands. Membership is a secret.</p>
-    </div>
-  </div>
-</div>
-        <!--Leviathan Hunters from Ramses Melendez Artstation https://cdnb.artstation.com/p/assets/images/images/004/060/003/large/ramses-melendez-leviathan-1.jpg?1479923954-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/leviathan_hunters.jpg" alt="Leviathan Approaching a Ship">
-    </div>
-    <div class="flip-card-back">
-      <h2>Leviathan Hunters</h2>
-      <h3>Institutions of the City</h3>
-      <p>The daring captains and crews that grapple with the titanic demons of the Void Sea to drain their blood for processing into electroplasm</p>
-    </div>
-  </div>
-</div>
-        <!--from the Blades in the Dark Kickstarter https://www.kickstarter.com/projects/2080350433/blades-in-the-dark-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/wraiths.jpg" alt="A shadowed thief leaps through the air">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Wraiths</h2>
-      <h3>Underworld Organization</h3>
-      <p>A mysterious crew of masked thieves and spies</p>
-    </div>
-  </div>
-</div>
-        <!--From in active Etsy account: https://www.etsy.com/listing/208692763/ https://img1.etsystatic.com/049/0/5452480/il_570xN.673117033_t3hy.jpg-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/hive.jpg" alt="ornate golden broach of two bees on black surface">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Hive</h2>
-      <h3>Underworld Organization</h3>
-      <p>A guild of merchants who secretly trade in contraband. Named for their symbol, a golden bee.</p>
-    </div>
-  </div>
-</div>
-        <!--From Assassin's Creed IV, specifically this fan site https://www.planetminecraft.com/skin/edward-kenway-assassins-creed-iv-2880210/-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-            <img src="images/Factions/red_sash.png" alt="A hooded assassin with two swords drawn and a distinct red sash around waist">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Red Sash</h2>
-      <h3>Underworld Organization</h3>
-      <p>Originally an Iruvian school of swordsmanship, it has since expanded into more nefarious operations</p>
-    </div>
-  </div>
-</div>
-        <!--https://www.storenvy.com/products/18148337-la-llorona-11x17/v/50935013?item_group_id=18148337-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-            <img src="images/Factions/weepinglady.jpg" alt="The Weeping Woman holds the hands of two shadowed children">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Weeping Woman</h2>
-      <h3>Society's Fringe</h3>
-      <p>A charity and pseudo-religion, acting as champions of the poor and especially orphaned children</p>
-    </div>
-  </div>
-</div>
-        <!--http://victorian-era.org/victorian-spiritualism-spiritualists.html-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/echo.jpg" alt="Victorian Era photograph of a seance">
-    </div>
-    <div class="flip-card-back">
-      <h2>The Path of Echoes</h2>
-      <h3>Society's Fringe</h3>
-      <p>A mysterious cult that borders on open rebellion against spirit laws. They revere the ancients and seek to gain knowledge from the past--including consorting with ghosts or even letting them possess hosts</p>
-    </div>
-  </div>
-</div>
-        <!--https://flabergastertron.tumblr.com/post/30795246878-->
-<div class="flip-card" tabindex="0">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-        <img src="images/Factions/deathland_scavenger2.jpg" alt="Scavenger of the desert with large sword and intimidating mask">
-    </div>
-    <div class="flip-card-back">
-      <h2>Deathland Scavenger</h2>
-      <h3>Society's Fringe</h3>
-      <p>Convicts from Ironhook and desperate freelancers who roam the wasteland beyond the lightning barriers</p>
-    </div>
-  </div>
-</div>
-        </div>
-        <p><h2>Tier*</h2></p>
-        <p> The city is made up of a labyrnth of relationships, represented by a faction mechanic. Each notable faction is ranked by Tier—a measure of wealth, influence, and scale. At the highest level are the Tier V and VI factions, the true powers of the city. Your crew begins at Tier 0.
-        </p>
-        <p>
-        You’ll use your Tier rating to roll dice when you acquire an asset, as well as for any fortune roll for which your crew’s overall power level and influence is the primary trait. Most importantly, your Tier determines the quality level of your items as well as the quality and scale of the gangs your crew employs—and thereby what size of enemy you can expect to handle.
-        </p>
-        <p><h2>Turf</h2></p>
-        <p>One way to contribute to the crew’s development is by acquiring turf. When you seize and hold territory, you establish a more stable basis for your rep. Each piece of turf that you claim represents abstracted support for the crew (often a result of the fear you instill in the citizens on that turf).
-        </p>
-        <p>
-        Turf is marked on your rep tracker (see the example below). Each piece of turf you hold reduces the rep cost to develop by one. So, if you have 2 turf, you need 10 rep to develop. If you have 4 turf, you need 8 rep to develop. You can hold a maximum of 6 turf. When you develop and reset your rep, you keep the marks from all the turf you hold.
-        </p>
-        <p>
-            *Borrowed from <a href="https://bladesinthedark.com/faction-game">https://bladesinthedark.com/faction-game</a>.
-        </p>
-<table>
-        <caption>
-            Factions of Duskvol (thus far)
-        </caption>
-      <thead>
-        <tr>
-        <th scope="col" class="colhead">Listing</th>
-        <th scope="col" class="colhead">Area</th>
-        <th scope="col" class="colhead">Name</th>
-        <th scope="col" class="colhead">Tier</th>
-        <th scope="col" class="colhead">Hold</th>
-        <th scope="col" class="colhead">Standing</th>
-        <th scope="col" class="colhead">Description</th>
-        </tr>
-      </thead>
-      <tbody>
-       <tr>
-         <th scope="row" class="rowhead">1</th>
-         <td>Neighborhood</td>
-         <td>The Nightmarket</td>
-         <td> - </td>
-         <td>Strong</td>
-         <td>+1</td>
-         <td>If you know where to look, you can get just about anything you want at the Nightmarket. While they'll take anyone's coin, they don't care for the uptown elites</td>
-       </tr>
-       <tr>
-         <th scope="row" class="rowhead">2</th>
-         <td>The Fringe</td>
-         <td>The Weeping Lady</td>
-         <td>II</td>
-         <td>Weak</td>
-         <td>+1</td>
-         <td>A charity and pseudo-religion, honoring the first Lod Governor of Doskvol, Lady Devera, said to be a champion for the poor after losing her two children.</td>
-       </tr>
-       <tr>
-         <th scope="row" class="rowhead">3</th>
-         <td>Labor & Trade</td>
-         <td>Gondoliers Union</td>
-         <td>III</td>
-         <td>Strong</td>
-         <td>-1</td>
-         <td>Horses are almost non-existant in Duskvol, and most folks wouldn't be caught dead riding a goat, which leaves the inky water-ways of the city as the most efficient means of travel. And you aren't going to be going anywhere without first paying the gondoliers.</td>
-       </tr>
-      </tbody>
-    </table>
-<p><h2>Faction Notes</h2></p>
-<div class="flex-container">
-<p><h3>Gondoliers</h3></p>
-<p>The canal boat operators. Venerated by the ancient tradition. Said to know occult secrets from the many things submerged beneath the inky tide. They're the main means of transportation in the city...say for a quick getaway from a heist, and you've managed to piss them off. Impressive!</p>
-<p><h3>The Weeping Lady</h3></p>
-<p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves</p>
-<p><h3>The Nightmarket</h3></p>
-<p>If you ask anyone where the heart of commerce is, they'll say uptown with the big wigs and government folks, but if you ask anyone where the heart of the city is, they'll tell you the Nightmarket. It is the part of the city that never sleeps, and in fact relishes the liminal state it seems to exist in--one foot in legitimate commerce, one in the exotic. Since your crew is set up in this part of town, it's best to stay on their good side.</p>
-</div>
+
     </main>
-    <br><br><br>
     <footer>
-    	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
+        <img src="images/banner.png" alt="blades in the dark banner" id="banner">
+        <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
