--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='icon' href='favicon.ico' type='image/x-icon'/>
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
     <header>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <nav>
-            <ul>
+            <ul class="nav_links">
               <li><a class="active" href="index.html"><i class="fas fa-dungeon"></i>The Game</a></li>
                <li><a href="map.html">The City</a></li>
               <li><a href="crew.html">The Crew</a></li>
