--- a/newspaper.html
+++ b/newspaper.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='icon' href='favicon.ico' type='image/x-icon'/>
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -28,13 +28,13 @@
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
 <!--JavaScript-->
     <script type="text/javascript" src="js/scripts.js"></script>
-    <title>Blades in the Dark Ann Arbor</title>
+    <title>Blades in the Dark - The Duskvol Daily</title>
 </head>
 <body>
     <header>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <nav>
-            <ul>
+            <ul class="nav_links">
               <li><a href="index.html">The Game</a></li>
                <li><a href="map.html">The City</a></li>
               <li><a href="crew.html">The Crew</a></li>
@@ -48,26 +48,40 @@
     <section class="newspaper-background">
       <h1>The Duskvol Daily</h1>
       <hr>
-    <section class="newspaper">
-        <p><h2>Gondoliers Gone Grouchy!</h2></p>
-        <img src="images/gondolier_bw.png" alt="Gondolier sailing through the canals of Duskvol">
-        <!--image from https://i.dailymail.co.uk/i/pix/2010/10/16/article-1321111-0BA0C9BB000005DC-961_634x678.jpg-->
-        <p>Gondoliers throughout the city have gone on strike this week, leading to an almost complete standstill of traffic on the canal throughways that crisscross the city. No word from the gondoliers as to why this has occurred though many speculate it has something to do with the recent influx of <a class="secret" href="secret.html">ghosts plaguing the waters</a>. When questioned by <em>The Duskvol Daily</em> one gondolier pointed out "You'd be unhappy too if you were being paid minimum wage to navigate an ink black canal where at any moment a ghost could pop up and eat you, or worse your paying customer."
+    <div class="newspaper">
+        <p>
+          <h2>Gondoliers Gone Grouchy!</h2>
         </p>
-        <p>For now their distress remains a mystery, but surely our wonderous and benevolent governor will have them back to work in no time.</p>
-        <p><h2>Who Is The Weeping Lady? An Investigative Series Part I</h2></p>
-        <p>If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret.html" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?</p>
-        <p><h2>Lord Governer's Day is Upon us!</h2></p>
+          <img src="images/gondolier_bw.png" alt="Gondolier sailing through the canals of Duskvol">
+          <!--image from https://i.dailymail.co.uk/i/pix/2010/10/16/article-1321111-0BA0C9BB000005DC-961_634x678.jpg-->
+        <p>
+          Gondoliers throughout the city have gone on strike this week, leading to an almost complete standstill of traffic on the canal throughways that crisscross the city. No word from the gondoliers as to why this has occurred though many speculate it has something to do with the recent influx of <a href="secret.html" class="secret">ghosts plaguing the waters</a>. When questioned by <em>The Duskvol Daily</em> one gondolier pointed out "You'd be unhappy too if you were being paid minimum wage to navigate an ink black canal where at any moment a ghost could pop up and eat you, or worse your paying customer."
+        </p>
+        <p>
+          For now their distress remains a mystery, but surely our wonderous and benevolent governor will have them back to work in no time.
+        </p>
+        <p>
+          <h2>Who Is The Weeping Lady? An Investigative Series Part I</h2>
+        </p>
+        <p>
+          If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret.html" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?
+        </p>
+        <p>
+          <h2>Lord Governer's Day is Upon us!</h2>
+        </p>
         <img src="images/victoria-diamond-jubileeia.jpg" alt="Queen Victoria's Diamond Jubileeia, pretending to be Lord Governor's Day of Duskvol">
         <!--https://www.english-heritage.org.uk/learn/story-of-england/victorian/power-and-politics/-->
-        <p>That's right denizens of Duskvol, Lord Governor's Day is here! Sure it's hard to tell what season, or even what day it is in our Twilight Town, but you can bet everyone knows when the festivities begin. Due to the gondolier strike this year the parade will be held along the streets and fireworks will likely be banned for safety reasons. In the past the hasn't stopped local gangs for igniting some off the their neighborhoods. This is highly dangerous, and we here at the Daily Duskvol do not condon such actions (but we'll be putting out a list of best places to see the fireworks in tomorrow paper!). This year will include the typical treats and festivities, but the Lord Governor has declared something new this year as well--and apparently it's a surprise! His entire staff were incredibly tight lipped, though very excited. I guess we'll just have to wait and see.
+        <p>
+          That's right denizens of Duskvol, Lord Governor's Day is here! Sure it's hard to tell what season, or even what day it is in our Twilight Town, but you can bet everyone knows when the festivities begin. Due to the gondolier strike this year the parade will be held along the streets and fireworks will likely be banned for safety reasons. In the past the hasn't stopped local gangs for igniting some off the their neighborhoods. This is highly dangerous, and we here at the Daily Duskvol do not condon such actions (but we'll be putting out a list of best places to see the fireworks in tomorrow paper!). This year will include the typical treats and festivities, but the Lord Governor has declared something new this year as well--and apparently it's a surprise! His entire staff were incredibly tight lipped, though very excited. I guess we'll just have to wait and see.
       </p>
+  </div>
   </section>
-
     </main>
-<br><br><br>
     <footer>
-    	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
+        <img src="images/banner.png" alt="blades in the dark banner" id="banner">
+        <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
+
+
