--- a/crew.html
+++ b/crew.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='icon' href='favicon.ico' type='image/x-icon'/>
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -28,13 +28,13 @@
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
 <!--JavaScript-->
     <script type="text/javascript" src="js/scripts.js"></script>
-    <title>Blades in the Dark Ann Arbor</title>
+    <title>Blades in the Dark - Crew</title>
 </head>
 <body>
     <header>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <nav>
-            <ul>
+            <ul class="nav_links">
               <li><a href="index.html">The Game</a></li>
                <li><a href="map.html">The City</a></li>
               <li><a class="active" href="crew.html"><i class="fas fa-dungeon"></i> The Crew</a></li>
@@ -159,3 +159,5 @@
     </footer>
     </body>
 </html>
+
+
