--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -49,62 +49,63 @@
       <div class="grid-container">
   <div class="grid-item map"><img src="images/map.png" alt="Map of Fictional City Duskvol"></div>
   <div class="grid-item barwickeft">
-    <p>
         <h2>Barrwickeft</h2>
+        <p>
           Residences and markets for the farmers who work the fields and eeleries.
       </p>
   </div>
   <div class="grid-item brightstone">
-    <p>
       <h2>Brightstone</h2>
+      <p>
           The grand mansions and luxury shops of the wealthy elite.
       </p>
   </div>  
   <div class="grid-item charhollow">
-    <p>
       <h2>Charhollow</h2>
+        <p>
           A crowded district of tenements and stacked houses.
-    </p>
+        </p>
   </div>
   <div class="grid-item coalridge">
-    <p>
+
       <h2>Coalridge</h2>
+        <p>
           The remnants of Doskvol's original hilltop mining settlment, now home to laborers and industrial factories.
-      </p>
+        </p>
   </div>
   <div class="grid-item crow">
-    <p>
       <h2>Crow's Foot</h2>
+      <p>
           A cramped neighborhood of multi-level streets, ruled by gangs.
       </p>
   </div>
   <div class="grid-item dock">
-    <p>
       <h2>The Docks</h2>
+      <p>
           Rough taverns, tattoo parlors, fighting pits, and warehouses.
       </p>
   </div>
   <div class="grid-item nightmarket">
-    <p>
       <h2>Nightmarket</h2>
+        <p>
           The trade center for exotic goods imported by rail. Many vendors also trade in illicit goods. Home to the Gaddoc Rail Station.
-    </p>
+        </p>
   </div>
   <div class="grid-item silkshore">
-    <p>
       <h2>Silkshore</h2>
+        <p>
           The "red lamp district" and arist community.
-    </p>
+        </p>
   </div>
   <div class="grid-item sixtowers">
-    <p>
       <h2>Six Towers</h2>
+        <p>
           A formerly rich district, now worn down and dilapidated.
-      </p>
+        </p>
   </div>
   <div class="grid-item whitecrown">
-    <p>
       <h2>Whitecrown</h2>
+        <p>
           The sprawling estates of the Lord Governor, Hunter Commander, Master Warden, and Doskvol Acadamy.
     </p>
   </div>
