--- a/crew.html
+++ b/crew.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -26,8 +26,6 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
-<!--JavaScript-->
-    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Blades in the Dark - Crew</title>
 </head>
 <body>
@@ -57,14 +55,12 @@
           <img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
         </div>
         <div class="grid-item stat">
-          <p>
             <ul>
               <li>Lurk — a stealthy Infiltrator and burglar</li>
               <li>Plump, calm, fierce, Severosian</li>
               <li>Former Academic</li>
               <li>Vice of Pleasure / Blackmarket Delicacies</li>
             </ul>
-          </p>
         </div>  
         <div class="grid-item bio">
           <p>
@@ -83,14 +79,12 @@
           <img src="images/cross.png" class="left" alt="Cross Clermont, spirit walker">
         </div>
         <div class="grid-item stat">
-          <p>
             <ul>
               <li>Whisper — An arcane adept and channeler</li>
               <li>Brooding, Bony, Iruvian</li>
               <li>Former Academic</li>
               <li>Vice of Stupor / drinking to excess</li>
             </ul>
-        </p>
         </div>  
         <div class="grid-item bio">
         <p>
@@ -110,14 +104,12 @@
           <img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
         </div>
         <div class="grid-item stat">
-        <p>
           <ul>
             <li>Slide — a subtle manipulator and spy</li>
             <li>Brooding, delicate, striking Doskvolian</li>
             <li>Disgraced Noble</li>
             <li>Vice of Pleasure / Dramatic and Scandalous Love Affairs</li>
           </ul>
-        </p>
         </div>  
         <div class="grid-item bio">
         <p>
@@ -137,14 +129,12 @@
           <img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
         </div>
         <div class="grid-item stat">
-        <p>
           <ul>
             <li>Leech — a saboteur and technician</li>
             <li>Affable, grimy, wiry Doskvolian</li>
             <li>Former Apothecary</li>
             <li>Vice of the Weird / Curiosity Shop</li>
           </ul>
-        </p>
         </div>  
         <div class="grid-item bio">
         <p>
@@ -152,12 +142,10 @@
         </p>
         </div>
     </div>
-
     </main>
     <footer>
-    	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
+        <img src="images/banner.png" alt="blades in the dark banner" id="banner">
+        <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
-
-
