--- a/faction.html
+++ b/faction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -26,8 +26,6 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
-<!--JavaScript-->
-    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Blades in the Dark Ann Arbor</title>
 </head>
 <body>
@@ -165,13 +163,13 @@
   </div>
 </div>
         </div>
-        <p><h2>Tier*</h2></p>
+        <h2>Tier*</h2>
         <p> The city is made up of a labyrnth of relationships, represented by a faction mechanic. Each notable faction is ranked by Tier—a measure of wealth, influence, and scale. At the highest level are the Tier V and VI factions, the true powers of the city. Your crew begins at Tier 0.
         </p>
         <p>
         You’ll use your Tier rating to roll dice when you acquire an asset, as well as for any fortune roll for which your crew’s overall power level and influence is the primary trait. Most importantly, your Tier determines the quality level of your items as well as the quality and scale of the gangs your crew employs—and thereby what size of enemy you can expect to handle.
         </p>
-        <p><h2>Turf</h2></p>
+        <h2>Turf</h2>
         <p>One way to contribute to the crew’s development is by acquiring turf. When you seize and hold territory, you establish a more stable basis for your rep. Each piece of turf that you claim represents abstracted support for the crew (often a result of the fear you instill in the citizens on that turf).
         </p>
         <p>
@@ -225,20 +223,17 @@
        </tr>
       </tbody>
     </table>
-<p><h2>Faction Notes</h2></p>
-<p><h3>Gondoliers</h3></p>
+<h2>Faction Notes</h2>
+<h3>Gondoliers</h3>
 <p>The canal boat operators. Venerated by the ancient tradition. Said to know occult secrets from the many things submerged beneath the inky tide. They're the main means of transportation in the city...say for a quick getaway from a heist, and you've managed to piss them off. Impressive!</p>
-<p><h3>The Weeping Lady</h3></p>
+<h3>The Weeping Lady</h3>
 <p>A myth to some, but to anyone who has grown up on the street an all too real presence. To the uninitiated the organization is a band of child stanchers, controlled by the machniations of a madwoman. Yet you've seen first hand the opportunities and care the organization gives to the runaways (or often the thrownaways). You've helped them out, and they are bound to return the favor with their network of streeturchins and thieves</p>
-<p><h3>The Nightmarket</h3></p>
+<h3>The Nightmarket</h3>
 <p>If you ask anyone where the heart of commerce is, they'll say uptown with the big wigs and government folks, but if you ask anyone where the heart of the city is, they'll tell you the Nightmarket. It is the part of the city that never sleeps, and in fact relishes the liminal state it seems to exist in--one foot in legitimate commerce, one in the exotic. Since your crew is set up in this part of town, it's best to stay on their good side.</p>
     </main>
-    <br><br><br>
     <footer>
         <img src="images/banner.png" alt="blades in the dark banner" id="banner">
         <p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
     </body>
 </html>
-
-
