--- a/newspaper.html
+++ b/newspaper.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -26,8 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
-<!--JavaScript-->
-    <script type="text/javascript" src="js/scripts.js"></script>
+
     <title>Blades in the Dark - The Duskvol Daily</title>
 </head>
 <body>
@@ -49,13 +48,11 @@
       <h1>The Duskvol Daily</h1>
       <hr>
     <div class="newspaper">
-        <p>
           <h2>Gondoliers Gone Grouchy!</h2>
-        </p>
           <img src="images/gondolier_bw.png" alt="Gondolier sailing through the canals of Duskvol">
           <!--image from https://i.dailymail.co.uk/i/pix/2010/10/16/article-1321111-0BA0C9BB000005DC-961_634x678.jpg-->
         <p>
-          Gondoliers throughout the city have gone on strike this week, leading to an almost complete standstill of traffic on the canal throughways that crisscross the city. No word from the gondoliers as to why this has occurred though many speculate it has something to do with the recent influx of <a href="secret.html" class="secret">ghosts plaguing the waters</a>. When questioned by <em>The Duskvol Daily</em> one gondolier pointed out "You'd be unhappy too if you were being paid minimum wage to navigate an ink black canal where at any moment a ghost could pop up and eat you, or worse your paying customer."
+          Gondoliers throughout the city have gone on strike this week, leading to an almost complete standstill of traffic on the canal throughways that crisscross the city. No word from the gondoliers as to why this has occurred though many speculate it has something to do with the recent influx of ghosts plaguing the waters. When questioned by <em>The Duskvol Daily</em> one gondolier pointed out "You'd be unhappy too if you were being paid minimum wage to navigate an ink black canal where at any moment a ghost could pop up and eat you, or worse your paying customer."
         </p>
         <p>
           For now their distress remains a mystery, but surely our wonderous and benevolent governor will have them back to work in no time.
@@ -64,11 +61,9 @@
           <h2>Who Is The Weeping Lady? An Investigative Series Part I</h2>
         </p>
         <p>
-          If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret.html" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?
+          If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something just waiting beneath the surface. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?
         </p>
-        <p>
           <h2>Lord Governer's Day is Upon us!</h2>
-        </p>
         <img src="images/victoria-diamond-jubileeia.jpg" alt="Queen Victoria's Diamond Jubileeia, pretending to be Lord Governor's Day of Duskvol">
         <!--https://www.english-heritage.org.uk/learn/story-of-england/victorian/power-and-politics/-->
         <p>
@@ -83,5 +78,3 @@
     </footer>
     </body>
 </html>
-
-
