--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
@@ -17,45 +17,46 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
-<!--Style Sheets -->
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-<!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+<!--Style Sheets -->
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>Blades in the Dark Ann Arbor</title>
+    <title>Blades in the Dark - Contact Page</title>
 </head>
 <body>
     <header>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <nav>
             <ul class="nav_links">
-              <li><a class="active" href="index.html"><i class="fas fa-dungeon"></i>The Game</a></li>
+              <li><a href="index.html">The Game</a></li>
                <li><a href="map.html">The City</a></li>
               <li><a href="crew.html">The Crew</a></li>
               <li><a href="faction.html">The Faction</a></li>
               <li><a href="newspaper.html">The Duskvol Daily</a></li>
-               <li><a href="contact.html">The Contact</a></li>
+               <li><a class="active" href="contact.html"><i class="fas fa-dungeon"></i>The Contact</a></li>
             </ul>
           </nav>
     </header>
     <main id="main">
-    	 <h1>~Contact Me~</h1>
+    	<h1>~Contact Form~</h1>
 
     	 <form action="https://formspree.io/xzbroqnj" method="POST">
 <fieldset>
-   <legend>~Contact Me~</legend>
+   <legend><h2 class="elegantshadow">Look Into the Shadows</h2></legend>
    <h2>Who Are You?</h2>
    <div class = "contact">
       <label for ="first">First Name:</label>
@@ -77,14 +78,12 @@
 
    <div>
    <h2>Message</h2>
-   <textarea name="textarea" value="Write Your Message Here...">
-  
-   </textarea>
-
+   <input type="text" id="message" name="textarea" value="Write Your Message Here...">
    <div class="center">
       <input type="reset" value="danger!"/>
       <input type="submit" value="click me!"/>
    </div>
+ </div>
    </fieldset>
    </form>
 
