--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
         <!--font-awesome-->
 
         <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
+        <!--jQuery-->
+        <script src="jquery-3.4.1.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
@@ -77,8 +79,6 @@
    </div>
 
    <div>
-   <h2>Message</h2>
-   <input type="text" id="message" name="textarea" value="Write Your Message Here...">
    <div class="center">
       <input type="reset" value="danger!"/>
       <input type="submit" value="click me!"/>
